--- a/src/app/fornecedor/fornecedor.list.component.html
+++ b/src/app/fornecedor/fornecedor.list.component.html
@@ -39,23 +39,23 @@
             <td mat-cell *matCellDef="let row">{{row.cnpj}}</td>
           </ng-container>
 
-<!--          <ng-container matColumnDef="actions">-->
-<!--            <th mat-header-cell *matHeaderCellDef> Opções </th>-->
-<!--            <td mat-cell *matCellDef="let row">-->
-<!--              <button class="btn btn-outline-secondary rounded mr-2"-->
-<!--                      type="button"-->
-<!--                      pTooltip="Editar"-->
-<!--                      (click)="edit(row.id)">-->
-<!--                <i class="fa fa-edit"></i>-->
-<!--              </button>-->
-<!--              <button class="btn btn-outline-primary rounded"-->
-<!--                      type="button"-->
-<!--                      pTooltip="Remover"-->
-<!--                      (click)="delete(row.id)">-->
-<!--                <i class="fa fa-trash-o"></i>-->
-<!--              </button>-->
-<!--            </td>-->
-<!--          </ng-container>-->
+          <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef> Opções </th>
+            <td mat-cell *matCellDef="let row">
+              <button class="btn btn-outline-secondary rounded mr-2"
+                      type="button"
+                      pTooltip="Editar"
+                      (click)="edit(row.id)">
+                <i class="fa fa-edit"></i>
+              </button>
+              <button class="btn btn-outline-primary rounded"
+                      type="button"
+                      pTooltip="Remover"
+                      (click)="delete(row.id)">
+                <i class="fa fa-trash-o"></i>
+              </button>
+            </td>
+          </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;">
