--- a/src/app/item/item.form.component.html
+++ b/src/app/item/item.form.component.html
@@ -11,7 +11,7 @@
       </div>
     </mat-card-title>
     <mat-card-content>
-      <form #form="ngForm">
+      <form #form="ngForm" (submit)="save()">
         <div class="row">
           <div class="col-md-2">
             <div class="form-group">
@@ -43,7 +43,7 @@
           <div class="col-md-3">
             <div class="form-group">
               <label for="patrimonio">Patrimônio</label>
-              <input type="text"
+              <input type="number"
                      id="patrimonio"
                      name="patrimonio"
                      class="form-control"
@@ -54,7 +54,7 @@
           <div class="col-md-3">
             <div class="form-group">
               <label for="siorg">Siorg</label>
-              <input type="text"
+              <input type="number"
                      id="siorg"
                      name="siorg"
                      class="form-control"
@@ -65,7 +65,7 @@
           <div class="col-md-3">
             <div class="form-group">
               <label for="valor">Valor</label>
-              <input type="text"
+              <input type="number"
                      id="valor"
                      name="valor"
                      class="form-control"
@@ -76,7 +76,7 @@
           <div class="col-md-3">
             <div class="form-group">
               <label for="qtdeMinima">Qtde Mínima</label>
-              <input type="text"
+              <input type="number"
                      id="qtdeMinima"
                      name="qtdeMinima"
                      class="form-control"
@@ -105,15 +105,14 @@
                           [(ngModel)]="object.devolver"
                           [style]="{width: '100%'}"
                           id="devolver"
-                          name="devolver"
-                          optionLabel="label">
+                          name="devolver">
               </p-dropdown>
             </div>
           </div>
           <div class="col-md-3">
             <div class="form-group">
               <label for="saldo">Saldo</label>
-              <input type="text"
+              <input type="number"
                      id="saldo"
                      name="saldo"
                      class="form-control"
@@ -138,26 +137,25 @@
             </div>
           </div>
         </div>
-      </form>
 
-      <div class="row">
-        <div class="col-md-12 d-flex justify-content-end">
-          <button type="button"
-                  class="mr-2 w-100px br-25px"
-                  mat-stroked-button
-                  (click)="back()">
-            Cancelar
-          </button>
+        <div class="row">
+          <div class="col-md-12 d-flex justify-content-end">
+            <button type="button"
+                    class="mr-2 w-100px br-25px"
+                    mat-stroked-button
+                    (click)="back()">
+              Cancelar
+            </button>
 
-          <button type="button"
-                  color="primary"
-                  class="w-100px br-25px"
-                  mat-stroked-button
-                  (click)="save()">
-            Salvar
-          </button>
+            <button type="submit"
+                    color="primary"
+                    class="w-100px br-25px"
+                    mat-stroked-button>
+              Salvar
+            </button>
+          </div>
         </div>
-      </div>
+      </form>
     </mat-card-content>
   </mat-card>
 </div>
