--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,6 +1,6 @@
 <app-toolbar></app-toolbar>
 
-<mat-sidenav-container class="example-sidenav" [ngStyle]="{height: 'calc(100% -' + toolbarHeight + 'px)'}">
+<mat-sidenav-container class="example-sidenav">
   <mat-sidenav [opened]="true" mode="side">
     <mat-nav-list>
       <a mat-list-item routerLink="/" routerLinkActive="active" (click)="display = false">
