realizado ajustes no crud do usuário

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -2,5 +2,7 @@
   <div>
     <span>Lab's Logistic</span>
   </div>
-  <a href="#" (click)="logout()"><mat-icon style="color: #FFFFFF">exit_to_app</mat-icon></a>
+  <div>
+    <a href="#" (click)="logout()"><mat-icon style="color: #FFFFFF">exit_to_app</mat-icon></a>
+  </div>
 </mat-toolbar>
