realizado ajustes na rotina de compra e criado componente da rotina de emprestimo

--- a/src/app/compra/compra.form.component.css
+++ b/src/app/compra/compra.form.component.css
@@ -1,6 +1,8 @@
 .example-container {
-  height: 270px;
+  height: auto;
+  max-height: 400px;
   overflow: auto;
+  margin-bottom: 2%;
 }
 
 table {
