--- a/src/app/compra/compra.form.component.html
+++ b/src/app/compra/compra.form.component.html
@@ -26,7 +26,7 @@
             </div>
           </div>
 
-          <div class="col-md-10">
+          <div class="col-md-8">
             <div class="form-group">
               <label for="descricao">Fornecedor</label>
               <p-autoComplete id="descricao"
@@ -40,6 +40,18 @@
                               (onClear)="object.fornecedor = null"
                               (completeMethod)="findFornecedores($event)">
               </p-autoComplete>
+            </div>
+          </div>
+
+          <div class="col-md-2">
+            <div class="form-group">
+              <label for="dataCompra">Data da Compra</label>
+              <p-calendar name="dataCompra"
+                          id="dataCompra"
+                          [style]="{width: '100%'}"
+                          inputStyleClass="form-control"
+                          [(ngModel)]="object.dataCompra">
+              </p-calendar>
             </div>
           </div>
         </div>
@@ -97,54 +109,52 @@
           </div>
         </div>
 
-        <div *ngIf="compraItemList.length > 0" class="example-container mat-elevation-z8">
-          <table mat-table [dataSource]="compraItemList">
-            <!-- Item Column -->
+        <div *ngIf="object?.compraItem?.length > 0" class="example-container mat-elevation-z8">
+          <table #table="matTable" mat-table [dataSource]="object.compraItem">
             <ng-container matColumnDef="item">
               <th mat-header-cell *matHeaderCellDef> Item </th>
               <td mat-cell *matCellDef="let itemCompra"> {{itemCompra.item.nome}} </td>
               <td mat-footer-cell *matFooterCellDef> Total </td>
             </ng-container>
 
-            <!-- Qtde Column -->
             <ng-container matColumnDef="qtde">
               <th mat-header-cell *matHeaderCellDef> Qtde </th>
               <td mat-cell *matCellDef="let itemCompra"> {{itemCompra.qtde}} </td>
-              <td mat-footer-cell *matFooterCellDef> {{getTotalCost() | currency}} </td>
+              <td mat-footer-cell *matFooterCellDef> {{getTotalCompra() | currency}} </td>
             </ng-container>
 
-            <!-- Valor Column -->
             <ng-container matColumnDef="valor">
               <th mat-header-cell *matHeaderCellDef> Valor </th>
               <td mat-cell *matCellDef="let itemCompra"> {{itemCompra.valor | currency}} </td>
-              <td mat-footer-cell *matFooterCellDef> {{getTotalCost() | currency}} </td>
+              <td mat-footer-cell *matFooterCellDef> {{getTotalCompra() | currency}} </td>
             </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
           </table>
         </div>
+
+        <div class="row">
+          <div class="col-md-12 d-flex justify-content-end">
+            <button type="button"
+                    class="mr-2 w-100px br-25px"
+                    mat-stroked-button
+                    (click)="back()">
+              Cancelar
+            </button>
+
+            <button type="button"
+                    color="primary"
+                    class="w-100px br-25px"
+                    mat-stroked-button
+                    (click)="save()">
+              Salvar
+            </button>
+          </div>
+        </div>
       </form>
 
-      <div class="row">
-        <div class="col-md-12 d-flex justify-content-end">
-          <button type="button"
-                  class="mr-2 w-100px br-25px"
-                  mat-stroked-button
-                  (click)="back()">
-            Cancelar
-          </button>
-
-          <button type="button"
-                  color="primary"
-                  class="w-100px br-25px"
-                  mat-stroked-button
-                  (click)="save()">
-            Salvar
-          </button>
-        </div>
-      </div>
     </mat-card-content>
   </mat-card>
 </div>
