ajustado rotina de compra, crud funcionando

--- a/src/app/compra/compra.list.component.html
+++ b/src/app/compra/compra.list.component.html
@@ -26,7 +26,7 @@
 
           <ng-container matColumnDef="fornecedor">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Fornecedor</th>
-            <td mat-cell *matCellDef="let row">{{row.fornecedor}}</td>
+            <td mat-cell *matCellDef="let row">{{row.fornecedor.nomeFantasia}}</td>
           </ng-container>
 
           <ng-container matColumnDef="dataCompra">
