--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary" class="d-flex justify-content-between">
   <div>
-    <span>Lab's Logistic</span>
+    <span>Sistema de Gerenciamento do DAINF</span>
   </div>
   <div>
     <a href="#" (click)="logout()"><mat-icon style="color: #FFFFFF">exit_to_app</mat-icon></a>
