--- a/src/app/compra/compra.form.component.html
+++ b/src/app/compra/compra.form.component.html
@@ -48,6 +48,8 @@
               <label for="dataCompra">Data da Compra</label>
               <p-calendar name="dataCompra"
                           id="dataCompra"
+                          dataType="string"
+                          dateFormat="dd/mm/yy"
                           [style]="{width: '100%'}"
                           inputStyleClass="form-control"
                           [(ngModel)]="object.dataCompra">
@@ -119,14 +121,27 @@
 
             <ng-container matColumnDef="qtde">
               <th mat-header-cell *matHeaderCellDef> Qtde </th>
-              <td mat-cell *matCellDef="let itemCompra"> {{itemCompra.qtde}} </td>
-              <td mat-footer-cell *matFooterCellDef> {{getTotalCompra() | currency}} </td>
+              <td mat-cell *matCellDef="let itemCompra" edita> {{itemCompra.qtde}} </td>
+              <td mat-footer-cell *matFooterCellDef> {{getQtdeTotal()}} </td>
             </ng-container>
 
             <ng-container matColumnDef="valor">
               <th mat-header-cell *matHeaderCellDef> Valor </th>
               <td mat-cell *matCellDef="let itemCompra"> {{itemCompra.valor | currency}} </td>
               <td mat-footer-cell *matFooterCellDef> {{getTotalCompra() | currency}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="actions">
+              <th mat-header-cell *matHeaderCellDef> Opções </th>
+              <td mat-cell *matCellDef="let itemCompra">
+                <button class="btn btn-outline-primary rounded"
+                        type="button"
+                        pTooltip="Remover"
+                        (click)="removeItem(itemCompra.item.id)">
+                  <i class="fa fa-trash-o"></i>
+                </button>
+              </td>
+              <td mat-footer-cell *matFooterCellDef></td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
