--- a/src/app/emprestimo/emprestimo.form.component.html
+++ b/src/app/emprestimo/emprestimo.form.component.html
@@ -1,1 +1,192 @@
-<p>emprestimo works!</p>
+<div class="container-fluid my-3">
+  <mat-card>
+    <mat-card-title>
+      <div class="d-flex align-items-center">
+        <button type="button"
+                (click)="back()"
+                mat-icon-button>
+          <mat-icon>arrow_back_ios</mat-icon>
+        </button>
+        <h4 class="m-0">Cadastro de Empréstimo</h4>
+      </div>
+    </mat-card-title>
+    <mat-card-content>
+      <form #form="ngForm">
+        <div class="row">
+          <div class="col-md-2">
+            <div class="form-group">
+              <label for="id">Código</label>
+              <input type="text"
+                     id="id"
+                     name="id"
+                     disabled
+                     class="form-control"
+                     [(ngModel)]="object.id"
+                     pInputText>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="form-group">
+              <label for="usuarioEmprestimo">Usuário Empréstimo</label>
+              <p-autoComplete id="usuarioEmprestimo"
+                              name="usuarioEmprestimo"
+                              appendTo="body"
+                              field="nome"
+                              inputStyleClass="form-control"
+                              [style]="{width: '100%'}"
+                              [(ngModel)]="object.usuarioEmprestimo"
+                              [suggestions]="usuarioList"
+                              (onClear)="object.usuarioEmprestimo = null"
+                              (completeMethod)="findUsuarios($event)">
+              </p-autoComplete>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="form-group">
+              <label for="usuarioResponsavel">Usuário Responsável</label>
+              <input type="text"
+                     id="usuarioResponsavel"
+                     name="usuarioResponsavel"
+                     class="form-control"
+                     [(ngModel)]="object.usuarioResponsavel.nome"
+                     disabled>
+            </div>
+          </div>
+
+          <div class="col-md-2">
+            <div class="form-group">
+              <label for="dataCompra">Data do Empréstimo</label>
+              <p-calendar name="dataCompra"
+                          id="dataCompra"
+                          dataType="string"
+                          dateFormat="dd/mm/yy"
+                          [style]="{width: '100%'}"
+                          inputStyleClass="form-control"
+                          [(ngModel)]="object.dataEmprestimo">
+              </p-calendar>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-7">
+            <div class="form-group">
+              <label for="item">Item</label>
+              <p-autoComplete id="item"
+                              name="item"
+                              appendTo="body"
+                              field="nome"
+                              inputStyleClass="form-control"
+                              [(ngModel)]="emprestimoItem.item"
+                              (onSelect)="setDevolucaoItem()"
+                              [style]="{width: '100%'}"
+                              [suggestions]="itemList"
+                              (onClear)="emprestimoItem.item = null"
+                              (completeMethod)="findProdutos($event)">
+              </p-autoComplete>
+            </div>
+          </div>
+
+          <div class="col-md-2">
+            <div class="form-group">
+              <label for="devolvido">Devolver</label>
+              <p-dropdown [options]="yesNoDropdown"
+                          [(ngModel)]="itemDevolver"
+                          [style]="{width: '100%'}"
+                          [disabled]="true"
+                          id="devolvido"
+                          name="devolvido">
+              </p-dropdown>
+            </div>
+          </div>
+
+          <div class="col-md-2">
+            <div class="form-group">
+              <label for="qtde">Quantidade</label>
+              <input type="number"
+                     id="qtde"
+                     [(ngModel)]="emprestimoItem.qtde"
+                     name="qtde"
+                     class="form-control"
+                     pInputText>
+            </div>
+          </div>
+
+          <div class="col-md-1">
+            <button type="button"
+                    class="form-control"
+                    (click)="insertItem()"
+                    mat-stroked-button>
+              <mat-icon>arrow_back_ios</mat-icon>
+            </button>
+          </div>
+        </div>
+
+        <div *ngIf="object?.emprestimoItem?.length > 0" class="example-container mat-elevation-z8">
+          <table #table="matTable" mat-table [dataSource]="object.emprestimoItem">
+            <ng-container matColumnDef="item">
+              <th mat-header-cell *matHeaderCellDef> Item </th>
+              <td mat-cell *matCellDef="let itemEmprestimo"> {{itemEmprestimo.item.nome}} </td>
+              <td mat-footer-cell *matFooterCellDef> Total </td>
+            </ng-container>
+
+            <ng-container matColumnDef="devolver">
+              <th mat-header-cell *matHeaderCellDef> Devolver </th>
+              <td mat-cell *matCellDef="let itemEmprestimo">
+                <span *ngIf="itemEmprestimo.item.devolver">Sim</span>
+                <span *ngIf="!itemEmprestimo.item.devolver">Não</span>
+              </td>
+              <td mat-footer-cell *matFooterCellDef> {{getQtdeTotal()}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="qtde">
+              <th mat-header-cell *matHeaderCellDef> Qtde </th>
+              <td mat-cell *matCellDef="let itemEmprestimo"> {{itemEmprestimo.qtde}} </td>
+              <td mat-footer-cell *matFooterCellDef> {{getQtdeTotal()}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="actions">
+              <th mat-header-cell *matHeaderCellDef> Opções </th>
+              <td mat-cell *matCellDef="let itemEmprestimo">
+                <button class="btn btn-outline-primary rounded"
+                        type="button"
+                        pTooltip="Remover"
+                        (click)="removeItem(itemEmprestimo.item.id)">
+                  <i class="fa fa-trash-o"></i>
+                </button>
+              </td>
+              <td mat-footer-cell *matFooterCellDef></td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
+          </table>
+        </div>
+
+        <div class="row">
+          <div class="col-md-12 d-flex justify-content-end">
+            <button type="button"
+                    class="mr-2 w-100px br-25px"
+                    mat-stroked-button
+                    (click)="back()">
+              Cancelar
+            </button>
+
+            <button type="button"
+                    color="primary"
+                    class="w-100px br-25px"
+                    mat-stroked-button
+                    (click)="save()">
+              Salvar
+            </button>
+          </div>
+        </div>
+      </form>
+
+    </mat-card-content>
+  </mat-card>
+</div>
+
