--- a/src/app/emprestimo/emprestimo.list.component.html
+++ b/src/app/emprestimo/emprestimo.list.component.html
@@ -24,14 +24,19 @@
             <td mat-cell *matCellDef="let row">{{row.id}}</td>
           </ng-container>
 
-          <ng-container matColumnDef="pessoa">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Pessoa</th>
-            <td mat-cell *matCellDef="let row">{{row.fornecedor}}</td>
+          <ng-container matColumnDef="usuarioEmprestimo">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Usuário Empréstimo</th>
+            <td mat-cell *matCellDef="let row">{{row?.usuarioEmprestimo?.nome}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="usuarioResponsavel">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Usuário Responsável</th>
+            <td mat-cell *matCellDef="let row">{{row?.usuarioResponsavel?.nome}}</td>
           </ng-container>
 
           <ng-container matColumnDef="dataEmprestimo">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Data do Empréstimo</th>
-            <td mat-cell *matCellDef="let row">{{row.dataCompra}}</td>
+            <td mat-cell *matCellDef="let row">{{row.dataEmprestimo}}</td>
           </ng-container>
 
           <ng-container matColumnDef="actions">
